<resources>
    <string name="app_name">Mid_evaluation</string>
    <string name="welcome_to_msc_it_timetable">Welcome to MSC.IT Timetable</string>
    <string name="monday">Monday</string>
    <string name="tuesday">TuesDay</string>
    <string name="wednesday">WednesDay</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="hello_monday">Hello Monday</string>
    <string name="hello_tuesday">Hello Tuesday</string>
    <string name="hello_wednesday">Hello wednesday</string>
    <string name="hello_thursday">Hello Thursday</string>
    <string name="hello_friday">Hello Friday</string>
    <string name="hello_saturday">Hello saturday</string>
    <string name="timing">Timing</string>
    <string name="subject_faculty"><![CDATA[Subject & faculty]]></string>
    <string name="__2_to_5">2 to 5</string>
    <string name="_lab_system_programming">LAB (System Programming)</string>
    <string name="_9_to_10_30">9 to 10:30</string>
    <string name="software_enginearing_manish_khare">Software enginearing (Manish Khare)</string>
    <string name="_7_to_8">7 to 8</string>
    <string name="_system_programming_amit_mankodi">System Programming (Amit mankodi)</string>
    <string name="_lab_oop">LAB (oop)</string>
    <string name="oop_lavneet_singh">oop (Lavneet singh)</string>
    <string name="web_programming_shrti_bhilare">Web Programming (Shrti bhilare)</string>
    <string name="_12_to_1_30">12 to 1:30</string>
    <string name="web_programming_shruti_bhillare">Web Programming (shruti bhillare)</string>
    <string name="networking_kalyan_sassidhar">Networking (Kalyan sassidhar)</string>
    <string name="system_programming_amit_mankodi">System Programming (Amit mankodi)</string>
    <string name="oop_lavneet_sir">oop (Lavneet sir)</string>
    <string name="lab_oop">LAB (oop)</string>
    <string name="networking_kalyan_sasshidhar">Networking (kalyan sasshidhar)</string>
    <string name="web_programming_shruti__bhillare">Web programming (Shruti bhillare)</string>
    <string name="_2_to_5">2 to 5</string>
    <string name="lab_system_programming">LAB (System Programming)</string>
    <string name="_9_to_11_30">9 to 11:30</string>
    <string name="lab__oop">LAB (OOP )</string>
</resources>