<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".satActivity">

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="362dp"
      android:layout_height="102dp"
      android:layout_marginTop="170dp"
      android:baselineAligned="false"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <LinearLayout
        android:layout_width="248dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView3"
          android:layout_width="100dp"
          android:layout_height="63dp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="15dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/_2_to_5"
          android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView4"
          android:layout_width="match_parent"
          android:layout_height="63dp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="15dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/lab_system_programming"
          android:textSize="24sp" />
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearLayout3"
      android:layout_width="362dp"
      android:layout_height="102dp"
      android:layout_marginTop="30dp"
      android:baselineAligned="false"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <LinearLayout
        android:layout_width="248dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView5"
          android:layout_width="100dp"
          android:layout_height="63dp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="15dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/_9_to_11_30"
          android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView6"
          android:layout_width="match_parent"
          android:layout_height="63dp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="15dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/lab__oop"
          android:textSize="24sp" />
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="362dp"
      android:layout_height="102dp"
      android:layout_marginTop="24dp"
      android:baselineAligned="false"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="248dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView7"
          android:layout_width="100dp"
          android:layout_height="63dp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="15dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/timing"
          android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView8"
          android:layout_width="match_parent"
          android:layout_height="63dp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="15dp"
          android:fontFamily="sans-serif-black"
          android:text="@string/subject_faculty"
          android:textSize="24sp" />
    </LinearLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>